--- a/README
+++ b/README
@@ -1,18 +1,39 @@
 KitpagesFileSystemBundle
-=====================================
+========================
 
-This is a bundle that provides a filesystem abstraction layer.
-This bundle was based on the code of KnpGaufretteBundle
+This is a bundle that provides a filesystem abstraction layer. Basicaly this does the
+same as the gaufrette library from KnpLabs, but it manages much more efficiently big files. We can
+manage a 2GB file with a memory limit of 128Mo for the PHP process. We never transfert the entire
+content in a $content variable.
+
+With this bundle you can save your files on different filesystems (S3, Local filesystem, FTP,...)
+
+Some elements of the configuration system are based on the code of the KnpGaufretteBundle.
+
+Actual state
+============
+This bundle is in alpha state. The first adapters are :
+
+* Local adapter : file system of the server
+* S3 adapter : for Amazon Web Service AWS S3
 
 Installation
 ============
-hum... as usual...
+You need to add the following lines in your deps :
 
-add vendors/ in the app/autoload.php
+    [FileSystemBundle]
+        git=git://github.com/kitpages/KitpagesFileSystemBundle.git
+        target=Kitpages/FileSystemBundle
 
-add the new Bundle in app/appKernel.php
+    [aws-sdk]
+        git=https://github.com/amazonwebservices/aws-sdk-for-php
+        target=aws-sdk
 
 
+Configuration example
+=====================
 
 
+Usage example
+=============
 
